--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,8 @@ nav:
       - Getting Help: community/help.md
       - Contributing: contributing.md
       - Roadmap: community/roadmap.md
+  - Blog:
+    - blog/index.md
 
 theme:
   name: "material"
@@ -131,6 +133,7 @@ markdown_extensions:
 - tables
 
 plugins:
+  - blog
   - search
   - autorefs
   - mkdocs-jupyter
