docs: add bedrock example to mkdocs, add missing print

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
       - Examples:
           - examples/agent-quickstart.ipynb
           - examples/llm-providers.ipynb
+          - examples/aws-bedrock.ipynb
           - examples/forecaster-quickstart.ipynb
           - examples/anomaly-detection-forecaster-quickstart.ipynb
           - examples/ts-foundation-models-comparison-quickstart.ipynb
