ci: add sktime as dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dev = [
   "pytest-rerunfailures>=15.1",
   "pytest-xdist>=3.8.0",
   "s3fs>=2025.3.0",
+  "sktime>=0.40.1",
 ]
 docs = [
   "mkdocs-include-markdown-plugin>=7.1.6",
