ci: more memory measuring

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,16 @@ jobs:
           enable-cache: true
 
       - name: Run tests 
-        run: uv run pytest
+        run: |
+          echo "Memory usage before:"
+          free -h
+          df -h
+
+          uv run pytest
+
+          echo "Memory usage after:"
+          free -h
+
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
 
