--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,8 @@ concurrency:
 jobs:
   test:
     name: test on ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+    runs-on:
+      labels: timecopilot-gpu-runner
     strategy:
       fail-fast: false
       matrix:
