ci: large cpu action runner implicit label

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,7 @@ concurrency:
 jobs:
   test:
     name: test on ${{ matrix.python-version }}
-    runs-on:
-      labels: larger-timecopilot-cpu-runner
+    runs-on: larger-timecopilot-cpu-runner
     strategy:
       fail-fast: false
       matrix:
