--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,15 @@ jobs:
       UV_PYTHON: ${{ matrix.python-version }}
 
     steps:
+      - name: Display NVIDIA SMI details
+        run: |
+          nvidia-smi
+          nvidia-smi -L
+          nvidia-smi -q -d Memory
+
+      - name: Ensure Docker is available with GPU support
+        run: docker run --rm --runtime=nvidia --gpus all ubuntu nvidia-smi
+
       - name: Clone repo
         uses: actions/checkout@v4
 
