--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,12 @@ jobs:
       - name: Ensure Docker is available with GPU support
         run: docker run --rm --runtime=nvidia --gpus all ubuntu nvidia-smi
 
+      - uses: Jimver/cuda-toolkit@v0.2.30
+        id: cuda-toolkit
+        with:
+          cuda: '12.8'
+          log-file-suffix: '${{matrix.python-version}}.txt'
+
       - name: Clone repo
         uses: actions/checkout@v4
 
