--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,12 +32,6 @@ jobs:
       - name: Ensure Docker is available with GPU support
         run: docker run --rm --runtime=nvidia --gpus all ubuntu nvidia-smi
 
-      - uses: Jimver/cuda-toolkit@v0.2.30
-        id: cuda-toolkit
-        with:
-          cuda: '12.8.1'
-          log-file-suffix: '${{matrix.python-version}}.txt'
-
       - name: Clone repo
         uses: actions/checkout@v4
 
@@ -45,6 +39,9 @@ jobs:
         uses: astral-sh/setup-uv@v6 
         with:
           enable-cache: true
+
+      - name: print CUDA_HOME
+        run: echo $CUDA_HOME
 
       - name: Run tests 
         run: uv run pytest
