fix: cap pydantic version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ dependencies = [
   "openai>=1.99.7",
   "pandas>=2.2.0 ; python_full_version >= '3.13'",
   "prophet>=1.1.7",
-  "pydantic-ai>=0.7.0",
+  "pydantic-ai>=0.7.0,<1.39.0",
   "scipy<=1.15.3",
   "statsforecast",
   "tabpfn-time-series==1.0.3 ; python_full_version < '3.13'",
