--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ dependencies = [
   "transformers==4.40.1 ; python_full_version < '3.13'",
   "transformers>=4.48,<5 ; python_full_version >= '3.13'",
   "tsfeatures",
-  "utilsforecast[plotting]",
+  "utilsforecast[plotting]>=0.2.15",
 ]
 description = "The GenAI Forecasting Agent · LLMs × Time Series Foundation Models"
 license = "MIT"
