--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -9,3 +9,8 @@ authors:
     description: Co-Creator
     avatar: https://media.licdn.com/dms/image/v2/D4E03AQGN9Z-UddZReg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1727908622546?e=1766016000&v=beta&t=zDLuE5S7jSlE_xDfQwPSTJnZjIi-BL_fzO44f8VnMkg
     url: https://www.linkedin.com/in/reneerosillo/
+  khuyentran:
+    name: Khuyen Tran
+    description: Content Creator
+    avatar: https://media.licdn.com/dms/image/v2/C5603AQEuv6kdwZOGLg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1576253923659?e=1772064000&v=beta&t=xeIl1AWhzQNfnUInXBu9XsaQgEE0U7effYLOCPWb8Cs
+    url: https://www.linkedin.com/in/khuyen-tran-1401/
