--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dev = [
   "pytest-rerunfailures>=15.1",
   "pytest-xdist>=3.8.0",
   "s3fs>=2025.3.0",
+  "skforecast>=0.20.0",
   "sktime>=0.40.1",
 ]
 docs = [
