--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dependencies = [
   "neuralforecast>=3.0.2",
   "nixtla>=0.6.6",
   "openai>=1.99.7",
+  "plotext>=5.2.0",
   "pandas>=2.2.0 ; python_full_version >= '3.13'",
   "prophet>=1.1.7",
   "pydantic-ai>=0.7.0",
@@ -64,6 +65,8 @@ dependencies = [
   "scipy<=1.15.3",
   "statsforecast",
   "tabpfn-time-series==1.0.3 ; python_full_version < '3.13'",
+  "textual>=0.50.0",
+  "textual-plotext>=0.2.0",
   "timecopilot-chronos-forecasting>=0.2.0",
   "timecopilot-granite-tsfm>=0.1.1",
   "timecopilot-timesfm>=0.2.1",
